Kunena markitup: update to fix remaining issues in editor

--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -86,80 +86,89 @@ label img {
 	border-radius: 4px;
 	min-height: 150px;
 }
-.markItUp .markItUpButton1 a {
+.markItUp .boldbutton a {
 	background-image: url(images/bold.png);
 }
-.markItUp .markItUpButton2 a {
+.markItUp .italicbutton a {
 	background-image: url(images/italic.png);
 }
-.markItUp .markItUpButton3 a {
+.markItUp .underlinebutton a {
 	background-image: url(images/underline.png);
 }
-.markItUp .markItUpButton4 a {
+.markItUp .strokebutton a {
 	background-image: url(images/stroke.png);
 }
-.markItUp .markItUpButton5 a {
+.markItUp .supscriptbutton a {
 	background-image: url(images/supscript.png);
 }
-.markItUp .markItUpButton6 a {
+.markItUp .subscriptbutton a {
 	background-image: url(images/subscript.png);
 }
-.markItUp .markItUpButton7 a {
+.markItUp .sizebutton a {
 	background-image: url(images/fonts.png);
 }
-.markItUp .markItUpButton8 a {
+.markItUp .colorsbutton a {
 	background-image: url(images/colors.png);
 }
-.markItUp .markItUpButton9 a {
+.markItUp .bulletedlistbutton a {
 	background-image: url(images/list-bullet.png);
 }
-.markItUp .markItUpButton10 a {
+.markItUp .numericlistbutton a {
 	background-image: url(images/list-numeric.png);
 }
-.markItUp .markItUpButton11 a {
+.markItUp .listitembutton a {
 	background-image: url(images/list-item.png);
 }
-.markItUp .markItUpButton12 a {
+.markItUp .alignleftbutton a {
 	background-image: url(images/text_align_left.png);
 }
-.markItUp .markItUpButton13 a {
+.markItUp .centerbutton a {
 	background-image: url(images/text_align_center.png);
 }
-.markItUp .markItUpButton14 a {
+.markItUp .alignrightbutton a {
 	background-image: url(images/text_align_right.png);
 }
-.markItUp .markItUpButton15 a {
+.markItUp .quotebutton a {
 	background-image: url(images/quotes.png);
 }
-.markItUp .markItUpButton16 a {
+.markItUp .codemodalboxbutton a, .markItUp .codesimplebutton a {
 	background-image: url(images/code.png);
 }
-.markItUp .markItUpButton17 a {
+.markItUp .tablebutton a {
 	background-image: url(images/table.png);
 }
-.markItUp .markItUpButton18 a {
+.markItUp .spoilerbutton a {
 	background-image: url(images/spoiler.png);
 }
-.markItUp .markItUpButton19 a {
+.markItUp .hiddentextbutton a {
 	background-image: url(images/hidden.png);
 }
-.markItUp .markItUpButton20 a {
+.markItUp .picturebutton a {
 	background-image: url(images/picture.png);
 }
-.markItUp .markItUpButton21 a {
+.markItUp .linkbutton a {
 	background-image: url(images/link.png);
 }
-.markItUp .markItUpButton22 a {
+.markItUp .ebaybutton a {
 	background-image: url(images/ebay.png);
 }
-.markItUp .markItUpButton23 a {
+.markItUp .videodropdownbutton a {
 	background-image: url(images/film.png);
 }
-.markItUp .markItUpButton24 a {
+.markItUp .mapbutton a {
 	background-image: url(images/map.png);
 }
-.markItUp .markItUpButton25 a {
+.markItUp .pollbutton a {
 	background-image: url(images/poll.png);
+}
+.markItUp .tweetbutton a {
+	background-image: url(images/tweet.png);
+}
+.markItUp .hrbutton a {
+	background-image: url(images/hr.png);
+}
+.markItUp .emoticonsbutton a {
+	background-image: url(images/emoticon.png);
 }
 .markItUp .clean a {
 	background-image: url(images/clean.png);
