[K3.1] Crypsis: CS Less

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -840,10 +840,11 @@ small.text-muted {
 }
 
 #status-form label.btn a.btn {
-  padding : 0 0 0 5px;
+	padding : 0 0 0 5px;
 }
 
-.navbar .btn, .navbar .btn-group {
+.navbar .btn,
+.navbar .btn-group {
 	margin-top:0;
 }
 
