--- a/components/com_kunena/site/template/crypsis/less/icons.less
+++ b/components/com_kunena/site/template/crypsis/less/icons.less
@@ -10,7 +10,7 @@
 .large-kicon {
 	width: 18px;
 	height: 18px;
-	margin-right: 0em;
+	margin-right: 0;
 	line-height: 18px;
 	font-size: 18px;
 }
@@ -44,7 +44,6 @@
 }
 
 .kmark-read {
-	background: url("icons/mark-read.png") no-repeat left center;
 	width: 16px;
 	height: 16px;
 }
@@ -63,7 +62,6 @@ div.krss-block {
 }
 
 .ktopicpoll {
-	background: url("icons/poll.png") no-repeat left center;
 	margin: 2px;
 	width: 32px;
 	height: 32px;
@@ -71,7 +69,6 @@ div.krss-block {
 }
 
 .kforumbottom {
-	background: url("icons/bottom_arrow.gif") no-repeat left center;
 	width: 18px;
 	height: 15px;
 }
@@ -81,7 +78,6 @@ div.krss-block {
 }
 
 .kfavoritestar {
-	background: url("icons/favoritestar.png") no-repeat left center;
 	width: 16px;
 	height: 16px;
 }
@@ -91,33 +87,28 @@ div.krss-block {
 }
 
 .krss-small {
-	background: url("icons/rss-small.png") no-repeat left center;
 	width: 16px;
 	height: 16px;
 }
 
 .kforumtop {
-	background: url("icons/top_arrow.gif") no-repeat left center;
 	width: 18px;
 	height: 15px;
 }
 
 .kreadforum,
 .knotloginforum {
-	background: url("icons/folder_nonew.png") no-repeat left center;
 	width: 32px;
 	height: 32px;
 }
 
 .kunreadforum,
 .knotloginforum {
-	background: url("icons/folder.png") no-repeat left center;
 	width: 32px;
 	height: 32px;
 }
 
 .kunreadforum-sm {
-	background: url("icons/folder_sm.png") no-repeat left center;
 	width: 12px;
 	height: 12px;
 	margin-right: 3px;
@@ -126,7 +117,6 @@ div.krss-block {
 
 .kreadforum-sm,
 .knotloginforum-sm {
-	background: url("icons/folder_nonew_sm.png") no-repeat left center;
 	width: 12px;
 	height: 12px;
 	margin-right: 3px;
