[K3.1] Fix more issues

--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -12,199 +12,201 @@ BBCODE BUTTONS
 -------------------------------------------------------------------- */
 
 table.kpostbuttonset {
-	tr {
-		td.kpostbuttons {
-			select.selectbox {
-				position: relative;
-				bottom: 5px;
-			}
-		}
+  tr {
+	td.kpostbuttons {
+	  select.selectbox {
+		position: relative;
+		bottom: 5px;
+	  }
 	}
+  }
 }
 
 .kattachment {
-	.hasTip {
-		display: inline;
-	}
+  .hasTip {
+	display: inline;
+  }
 }
 
 img.kbbcode {
-	cursor: pointer;
-	margin-top: 4px;
-	margin-right: 1px;
-	padding: 0;
+  cursor: pointer;
+  margin-top: 4px;
+  margin-right: 1px;
+  padding: 0;
 }
 
 .kspoiler {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 #kbbcode-toolbar {
-	list-style : none inside;
-	height: 18px;
-	margin: 2px 0 2px;
+  list-style : none inside;
+  height: 18px;
+  margin: 2px 0 2px;
+  padding: 0;
+  position: relative;
+  li {
+	float: left;
+	list-style : none none !important;
+	margin: 0;
 	padding: 0;
-	position: relative;
-	li {
-		float: left;
-		list-style : none none !important;
-		margin: 0;
-		padding: 0;
-		a {
-			background : url("../media/iconsets/editor/default/default.png") no-repeat;
-			display: block;
-			height: 18px;
-			width: 18px;
-		}
-		a:hover {
-			cursor: pointer;
-			padding: 0;
-		}
-		a.kbbcode-separator {
-			background-position: -400px 0;
-			width: 8px;
-			cursor: default;
-		}
-		span {
-			display: none;
-		}
+	a {
+	  background-image: url("iconsets/editor/default/default.png");
+	  background-repeat: no-repeat;
+	  display: block;
+	  height: 18px;
+	  width: 18px;
 	}
+	a:hover {
+	  cursor: pointer;
+	  padding: 0;
+	}
+	a.kbbcode-separator {
+	  background-position: -400px 0;
+	  width: 8px;
+	  cursor: default;
+	}
+	span {
+	  display: none;
+	}
+  }
 }
 
+
 #kbbcode-help-button {
-	background-position: -396px -18px;
+  background-position: -396px -18px;
 }
 
 #kbbcode-poll-button {
-	background-position: -90px -18px;
+  background-position: -90px -18px;
 }
 
 #kbbcode-spoiler-button {
-	background-position: -144px 0;
+  background-position: -144px 0;
 }
 
 #kbbcode-table-button {
-	background-position: 0 -18px;
+  background-position: 0 -18px;
 }
 
 #kbbcode-list-button {
-	background-position: -216px 0;
+  background-position: -216px 0;
 }
 
 #kbbcode-ulist-button {
-	background-position: -180px 0;
+  background-position: -180px 0;
 }
 
 #kbbcode-underline-button {
-	background-position: -36px 0;
+  background-position: -36px 0;
 }
 
 #kbbcode-strike-button {
-	background-position: -54px 0;
+  background-position: -54px 0;
 }
 
 #kbbcode-previewbottom-button {
-	background-position: -252px -18px;
+  background-position: -252px -18px;
 }
 
 #kbbcode-map-button {
-	background-position: -72px -18px;
+  background-position: -72px -18px;
 }
 
 #kbbcode-sub-button {
-	background-position: -72px 0;
+  background-position: -72px 0;
 }
 
 #kbbcode-video-button {
-	background-position: -378px 0;
+  background-position: -378px 0;
 }
 
 #kbbcode-link-button {
-	background-position: -342px 0;
+  background-position: -342px 0;
 }
 
 #kbbcode-code-button {
-	background-position: -306px 0;
+  background-position: -306px 0;
 }
 
 #kbbcode-left-button {
-	background-position: -234px 0;
+  background-position: -234px 0;
 }
 
 #kbbcode-bold-button {
-	background-position: 0 0;
+  background-position: 0 0;
 }
 
 #kbbcode-gallery-button {
-	background-position: -54px -18px;
+  background-position: -54px -18px;
 }
 
 #kbbcode-module-button {
-	background-position: -18px -18px;
+  background-position: -18px -18px;
 }
 
 #kbbcode-quote-button {
-	background-position: -288px 0;
+  background-position: -288px 0;
 }
 
 #kbbcode-right-button {
-	background-position: -270px 0;
+  background-position: -270px 0;
 }
 
 #kbbcode-italic-button {
-	background-position: -18px 0;
+  background-position: -18px 0;
 }
 
 #kbbcode-attach-button {
-	background-position: -36px -18px;
+  background-position: -36px -18px;
 }
 
 #kbbcode-image-button {
-	background-position: -324px 0;
+  background-position: -324px 0;
 }
 
 #kbbcode-ebay-button {
-	background-position: -360px 0;
+  background-position: -360px 0;
 }
 
 #kbbcode-previewright-button {
-	background-position: -270px -18px;
+  background-position: -270px -18px;
 }
 
 #kbbcode-olist-button {
-	background-position: -198px 0;
+  background-position: -198px 0;
 }
 
 #kbbcode-size-button {
-	background-position: -108px 0;
+  background-position: -108px 0;
 }
 
 #kbbcode-center-button {
-	background-position: -252px 0;
+  background-position: -252px 0;
 }
 
 #kbbcode-hide-button {
-	background-position: -162px 0;
+  background-position: -162px 0;
 }
 
 #kbbcode-color-button {
-	background-position: -126px 0;
+  background-position: -126px 0;
 }
 
 #kbbcode-sup-button {
-	background-position: -90px 0;
+  background-position: -90px 0;
 }
 
 #kbbcode-smilies-button {
-	background-position: -108px -18px;
+  background-position: -108px -18px;
 }
 
 #kbbcode-hr-button {
-	background-position: -290px -18px;
+  background-position: -290px -18px;
 }
 
 #kbbcode-tweet-button {
-	background-position: -310px -18px;
+  background-position: -310px -18px;
 }
 
 #kbbcode-separator1,
@@ -215,154 +217,153 @@ img.kbbcode {
 #kbbcode-separator6,
 #kbbcode-separator7,
 #kbbcode-separator8 {
-	background-position: -400px 0;
-	width: 8px;
-	cursor: default;
+  background-position: -400px 0;
+  width: 8px;
+  cursor: default;
 }
 
 #kbbcode-size-options {
-	margin: 2px 0 0;
-	span:hover {
-		cursor: pointer;
-		padding: 0;
-	}
-	span {
-		vertical-align: middle;
-		display: inline-block;
-		line-height: 24px;
-	}
+  margin: 2px 0 0;
+  span:hover {
+	cursor: pointer;
+	padding: 0;
+  }
+  span {
+	vertical-align: middle;
+	display: inline-block;
+	line-height: 24px;
+  }
 }
 
 .kbbcode-colortable {
-	cursor: pointer;
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
+  cursor: pointer;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 img.kbbcode:hover {
-	cursor: pointer;
-	margin-top: 4px;
-	margin-right: 1px;
-	padding: 0;
+  cursor: pointer;
+  margin-top: 4px;
+  margin-right: 1px;
+  padding: 0;
 }
 
 .kfile-input {
-	display: block;
-	overflow: hidden;
-	visibility: visible;
+  display: block;
+  overflow: hidden;
+  visibility: visible;
 }
 
 #kattachments {
-	line-height: 18px;
-	a {
-		display: inline-block;
-		height: 18px;
-		width: 18px;
-		margin-right: 2px;
-		background : url("../media/iconsets/editor/default/default.png") no-repeat -216px -18px;
-	}
+  line-height: 18px;
+  a {
+	display: inline-block;
+	height: 18px;
+	width: 18px;
+	margin-right: 2px;
+	background : url("../media/iconsets/editor/default/default.png") no-repeat -216px -18px;
+  }
 }
 
 .form-horizontal .controls {
-	margin-left: 90px;
+  margin-left: 90px;
 }
 
 .form-horizontal .control-label {
-	width: 80px;
+  width: 80px;
 }
 
 .ktxtarea {
-	margin-left: -80px
+  margin-left: -80px
 }
 
 #postform input[type=radio] {
-	display: none;
+  display: none;
 }
 
 .controls-select input[type=radio] + label {
-	display: inline-block;
-	margin: -2px;
-	padding: 4px 12px;
-	background-color: transparent;
-	border: 1px solid rgba(0, 0, 0, 0.0);
-	border-radius: 4px;
+  display: inline-block;
+  margin: -2px;
+  padding: 4px 12px;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.0);
+  border-radius: 4px;
 }
 
 .controls-select input[type=radio]:checked + label {
-	background : rgba(0, 0, 0, 0.07) none;
-	border: 1px solid rgba(0, 0, 0, 0.2);
-	border-radius: 4px;
+  background : rgba(0, 0, 0, 0.07) none;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 
 #kbbcode-smilies-button {
-	background-position: -108px -18px;
+  background-position: -108px -18px;
 }
 
 #kbbcode-preview {
-	height: auto !important;
+  height: auto !important;
 }
 
 .kbbcode-preview-bottom {
-	border: 1px solid #dddddd;
-	padding: 4px 12px;
-	margin: 10px;
-	border-radius: 4px;
-	min-height: 150px;
+  border: 1px solid #dddddd;
+  padding: 4px 12px;
+  margin: 10px;
+  border-radius: 4px;
+  min-height: 150px;
 }
 
 // FIXME: remove this after microsoft have fixed the bug
 label img{
-	pointer-events: none;
+  pointer-events: none;
 }
 
 .dropzone .message {
-	opacity: 1;
-	-ms-filter: none;
-	filter: none;
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
 }
 
 .dropzone {
-	border: 1px solid rgba(0,0,0,0.03);
-	min-height: 120px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	background: rgba(0,0,0,0.03);
-	padding: 23px;
+  border: 1px solid rgba(0,0,0,0.03);
+  min-height: 120px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  background: rgba(0,0,0,0.03);
+  padding: 23px;
 }
 
 .dropzone .default.message {
-	opacity: 1;
-	-ms-filter: none;
-	filter: none;
-	-webkit-transition: opacity 0.3s ease-in-out;
-	-moz-transition: opacity 0.3s ease-in-out;
-	-o-transition: opacity 0.3s ease-in-out;
-	-ms-transition: opacity 0.3s ease-in-out;
-	transition: opacity 0.3s ease-in-out;
-	background : no-repeat 0 0;
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -moz-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  -ms-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+  background : no-repeat 0 0;
 }
 
 #klabel_info_drop_browse {
-	position: absolute;
-	width: 90%;
-	top: 50%;
-	left: 33%;
-	right: 50%
+  display: block;
+  padding: 5px 10px;
+  width: 300px;
+  margin: 50px auto 0 auto;
 }
 
 #files {
-	padding-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 #files button.btn {
-	margin-right: 5px;
+  margin-right: 5px;
 }
 
 #files p {
-	margin: 15px 0 0 0;
+  margin: 15px 0 0 0;
 }
 
 ul#kbbcode-toolbar li a#kbbcode-smilies-button {
-	display: none;
+  display: none;
 }
