--- a/components/com_kunena/site/template/crypsis/less/icons.less
+++ b/components/com_kunena/site/template/crypsis/less/icons.less
@@ -98,17 +98,20 @@ div.krss-block {
 
 .kreadforum,
 .knotloginforum {
+	background: url("icons/folder_nonew.png") no-repeat left center;
 	width: 32px;
 	height: 32px;
 }
 
 .kunreadforum,
 .knotloginforum {
+	background: url("icons/folder.png") no-repeat left center;
 	width: 32px;
 	height: 32px;
 }
 
 .kunreadforum-sm {
+	background: url("icons/folder_sm.png") no-repeat left center;
 	width: 12px;
 	height: 12px;
 	margin-right: 3px;
@@ -117,6 +120,7 @@ div.krss-block {
 
 .kreadforum-sm,
 .knotloginforum-sm {
+	background: url("icons/folder_nonew_sm.png") no-repeat left center;
 	width: 12px;
 	height: 12px;
 	margin-right: 3px;
