[K3.1] Crypsis: style editor update

--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -1,4 +1,3 @@
-
 /**
 * Kunena Component
 * @package Kunena.Template.Crypsis
@@ -16,389 +15,432 @@ BBCODE BUTTONS
 -------------------------------------------------------------------- */
 
 table.kpostbuttonset {
-  tr {
-	td.kpostbuttons {
-	  select.selectbox {
-		position: relative;
-		bottom: 5px;
-	  }
+	tr {
+		td.kpostbuttons {
+			select.selectbox {
+				position : relative;
+				bottom   : 5px;
+			}
+		}
 	}
-  }
 }
+
 .kattachment {
- .hasTip {
- display: inline;
+	.hasTip {
+		display : inline;
+	}
 }
-}
+
 .kfile-input {
-	display: block;
-	overflow: hidden;
-	visibility: visible;
+	display    : block;
+	overflow   : hidden;
+	visibility : visible;
 }
+
 #kattachments {
-	line-height: 18px;
- a {
- background-image: url("iconsets/editor/default/default.png");
- background-repeat: no-repeat;
- display: inline-block;
- height: 18px;
- width: 18px;
- margin-right: 2px;
- background-position: -216px -18px;
+	line-height : 18px;
+	a {
+		background          : url("iconsets/editor/default/default.png") no-repeat -216px -18px;
+		display             : inline-block;
+		height              : 18px;
+		width               : 18px;
+		margin-right        : 2px;
+	}
 }
-}
+
 .form-horizontal .controls {
-	margin-left: 90px;
+	margin-left : 90px;
 }
+
 .form-horizontal .control-label {
-	width: 80px;
+	width : 80px;
 }
+
 .ktxtarea {
-	margin-left: -80px
+	margin-left : -80px
 }
+
 #postform input[type=radio] {
-	display: none;
+	display : none;
 }
+
 input[type=radio] + label {
-	display: inline-block;
-	margin: -2px;
-	padding: 4px 12px;
-	background-color: transparent;
-	border-color: #ddd;
+	display          : inline-block;
+	margin           : -2px;
+	padding          : 4px 12px;
+	background-color : transparent;
 }
+
 input[type=radio]:checked + label {
-	background-image: none;
-	background-color: rgba(0, 0, 0, 0.07);
-	border: 1px solid rgba(0, 0, 0, 0.2);
-	;
-	border-radius: 4px;
+	background    : rgba(0, 0, 0, 0.07) none;
+	border        : 1px solid rgba(0, 0, 0, 0.2);
+	border-radius : 4px;
 }
+
 label img {
-	pointer-events: none;
+	pointer-events : none;
 }
+
 #kbbcode-smilies-button {
-	background-position: -108px -18px;
+	background-position : -108px -18px;
 }
+
 .kbbcode-preview-bottom {
-	border: 1px solid #dddddd;
-	padding: 4px 12px;
-	margin: 10px;
-	border-radius: 4px;
-	min-height: 150px;
+	border        : 1px solid #dddddd;
+	padding       : 4px 12px;
+	margin        : 10px;
+	border-radius : 4px;
+	min-height    : 150px;
 }
+
 .markItUp .boldbutton a {
-	background-image: url(images/bold.png);
+	background-image : url(images/bold.png);
 }
+
 .markItUp .italicbutton a {
-	background-image: url(images/italic.png);
+	background-image : url(images/italic.png);
 }
+
 .markItUp .underlinebutton a {
-	background-image: url(images/underline.png);
+	background-image : url(images/underline.png);
 }
+
 .markItUp .strokebutton a {
-	background-image: url(images/stroke.png);
+	background-image : url(images/stroke.png);
 }
+
 .markItUp .supscriptbutton a {
-	background-image: url(images/supscript.png);
+	background-image : url(images/supscript.png);
 }
+
 .markItUp .subscriptbutton a {
-	background-image: url(images/subscript.png);
+	background-image : url(images/subscript.png);
 }
+
 .markItUp .sizebutton a {
-	background-image: url(images/fonts.png);
+	background-image : url(images/fonts.png);
 }
-.markItUp .colorsbutton a {
-	background-image: url(images/colors.png);
+
+.markItUp .colors a {
+	background-image : url(images/colors.png);
 }
+
 .markItUp .bulletedlistbutton a {
-	background-image: url(images/list-bullet.png);
+	background-image : url(images/list-bullet.png);
 }
+
 .markItUp .numericlistbutton a {
-	background-image: url(images/list-numeric.png);
+	background-image : url(images/list-numeric.png);
 }
+
 .markItUp .listitembutton a {
-	background-image: url(images/list-item.png);
+	background-image : url(images/list-item.png);
 }
+
 .markItUp .alignleftbutton a {
-	background-image: url(images/text_align_left.png);
+	background-image : url(images/text_align_left.png);
 }
+
 .markItUp .centerbutton a {
-	background-image: url(images/text_align_center.png);
+	background-image : url(images/text_align_center.png);
 }
+
 .markItUp .alignrightbutton a {
-	background-image: url(images/text_align_right.png);
+	background-image : url(images/text_align_right.png);
 }
+
 .markItUp .quotebutton a {
-	background-image: url(images/quotes.png);
+	background-image : url(images/quotes.png);
 }
+
 .markItUp .codemodalboxbutton a, .markItUp .codesimplebutton a {
-	background-image: url(images/code.png);
+	background-image : url(images/code.png);
 }
+
 .markItUp .tablebutton a {
-	background-image: url(images/table.png);
+	background-image : url(images/table.png);
 }
+
 .markItUp .spoilerbutton a {
-	background-image: url(images/spoiler.png);
+	background-image : url(images/spoiler.png);
 }
+
 .markItUp .hiddentextbutton a {
-	background-image: url(images/hidden.png);
+	background-image : url(images/hidden.png);
 }
+
 .markItUp .picturebutton a {
-	background-image: url(images/picture.png);
+	background-image : url(images/picture.png);
 }
+
 .markItUp .linkbutton a {
-	background-image: url(images/link.png);
+	background-image : url(images/link.png);
 }
+
 .markItUp .ebaybutton a {
-	background-image: url(images/ebay.png);
+	background-image : url(images/ebay.png);
 }
+
 .markItUp .videodropdownbutton a {
-	background-image: url(images/film.png);
+	background-image : url(images/film.png);
 }
+
 .markItUp .mapbutton a {
-	background-image: url(images/map.png);
+	background-image : url(images/map.png);
 }
+
 .markItUp .pollbutton a {
-	background-image: url(images/poll.png);
+	background-image : url(images/poll.png);
 }
+
 .markItUp .tweetbutton a {
-	background-image: url(images/tweet.png);
+	background-image : url(images/tweet.png);
 }
+
 .markItUp .hrbutton a {
-	background-image: url(images/hr.png);
+	background-image : url(images/hr.png);
 }
+
 .markItUp .emoticonsbutton a {
-	background-image: url(images/emoticon.png);
+	background-image : url(images/emoticon.png);
 }
+
 .markItUp .clean a {
-	background-image: url(images/clean.png);
+	background-image : url(images/clean.png);
 }
+
 .markItUp .colors ul {
-	width: auto;
-	padding: 1px;
+	width   : auto;
+	padding : 1px;
 }
+
 .markItUp .colors li {
-	border: 1px solid white;
-	width: 25px;
-	height: 25px;
-	overflow: hidden;
-	padding: 0px;
-	margin: 0px;
-	float: left;
+	border   : 1px solid white;
+	width    : 25px;
+	height   : 25px;
+	overflow : hidden;
+	padding  : 0;
+	margin   : 0;
+	float    : left;
 }
+
 .markItUp .colors ul a {
-	width: 25px;
-	height: 25px;
+	width  : 25px;
+	height : 25px;
 }
-.markItUp .colors ul a:hover {
-	background-color: none;
-}
+
 .markItUp .colors .col1-1 a {
-	background: black;
+	background : black;
 }
+
 .markItUp .colors .col1-2 a {
-	background: orange;
+	background : orange;
 }
+
 .markItUp .colors .col1-3 a {
-	background: red;
+	background : red;
 }
+
 .markItUp .colors .col2-1 a {
-	background: blue;
+	background : blue;
 }
+
 .markItUp .colors .col2-2 a {
-	background: purple;
+	background : purple;
 }
+
 .markItUp .colors .col2-3 a {
-	background: green;
+	background : green;
 }
+
 .markItUp .colors .col3-1 a {
-	background: white;
+	background : white;
 }
+
 .markItUp .colors .col3-2 a {
-	background: gray;
+	background : gray;
 }
+
 .markItUp .colors .col3-3 a {
-	background: black;
+	background : black;
 }
+
 .markItUp {
-	width: 100%;
+	width : 100%;
 }
+
 .markItUpContainer {
-	width: 100%;
+	width : 100%;
 }
+
 .markItUpEditor {
-	padding: 5px;
-	margin: 0px;
-	clear: both;
-	display: block;
-	line-height: 18px;
-	overflow: auto;
-	border: 1px solid #e5e5e5;
+	padding     : 5px;
+	margin      : 0;
+	clear       : both;
+	display     : block;
+	line-height : 18px;
+	overflow    : auto;
+	border      : 1px solid #e5e5e5;
 }
+
 .markItUpPreviewFrame {
-	overflow: auto;
-	background-color: #FFFFFF;
-	width: 99.9%;
-	height: 350px;
-	margin: 5px 0;
+	overflow         : auto;
+	background-color : #FFFFFF;
+	width            : 99.9%;
+	height           : 350px;
+	margin           : 5px 0;
 }
+
 .markItUpHeader {
-	width: 100%;
-	margin: 0px;
-	padding-bottom:10px;
-	height: 25px;
+	width          : 100%;
+	margin         : 0;
+	padding-bottom : 10px;
+	padding-left   : 10px;
+	height         : 25px;
 }
+
 .markItUpFooter {
-	width: 100%;
-	height: 25px;
-	padding-bottom: 10px;
+	width          : 100%;
+	height         : 25px;
+	padding-bottom : 10px;
 }
+
 /***************************************************************************************/
 /* first row of buttons */
 .markItUpHeader ul li {
-	list-style: none;
-	float: left;
-	position: relative;
+	list-style : none;
+	float      : left;
+	position   : relative;
 }
+
 .markItUpHeader ul li:hover > ul {
-	display: block;
+	display : block;
 }
+
 .markItUpHeader ul .markItUpDropMenu li {
-	margin-right: 0px;
+	margin-right : 0;
 }
+
 /* next rows of buttons */
 .markItUpHeader ul ul {
-	display: none;
-	position: absolute;
-	top: 18px;
-	left: 0px;
-	margin-top:10px;
-	background: #FFF;
-	border: 1px solid #e5e5e5;
+	display    : none;
+	position   : absolute;
+	top        : 18px;
+	left       : 0;
+	margin-top : 10px;
+	background : #FFF;
+	border     : 1px solid #e5e5e5;
 }
+
 .markItUpHeader ul ul li {
-	float: none;
-	border-bottom: 1px solid #e5e5e5;
-	
+	float         : none;
+	border-bottom : 1px solid #e5e5e5;
+
 }
+
 .markItUpHeader ul .markItUpSeparator {
-	margin: 0 5px;
-	width: 1px;
-	height: 24px;
-	overflow: hidden;
-	background-color: #CCC;
+	margin           : 0 5px;
+	width            : 1px;
+	height           : 24px;
+	overflow         : hidden;
+	background-color : #CCC;
 }
+
 .markItUpHeader ul ul .markItUpSeparator {
-	width: auto;
-	height: 1px;
-	margin: 0px;
+	width  : auto;
+	height : 1px;
+	margin : 0;
 }
+
 /* next rows of buttons */
 .markItUpHeader ul ul ul {
-	position: absolute;
-	top: -1px;
-	left: 150px;
+	position : absolute;
+	top      : -1px;
+	left     : 150px;
 }
+
 .markItUpHeader ul ul ul li {
-	float: none;
+	float : none;
 }
+
 .markItUpHeader ul a {
-	display: block;
-	width: 16px;
-	height: 16px;
-	text-indent: -10000px;
-	background-repeat: no-repeat;
-	padding: 3px;
-	margin: 0px;
+	display           : block;
+	width             : 16px;
+	height            : 16px;
+	text-indent       : -10000px;
+	background-repeat : no-repeat;
+	padding           : 5px;
+	margin            : 0;
 }
+
 .markItUpHeader ul ul a {
-	display: block;
-	padding-left: 0px;
-	text-indent: 0;
-	width: 120px;
-	padding: 5px 5px 5px 25px;
-	background-position: 2px 50%;
+	display             : block;
+	text-indent         : 0;
+	width               : 150px;
+	padding             : 5px 5px 5px 25px;
+	background-position : 2px 50%;
 }
+
 .markItUpHeader ul ul a:hover {
-	color: #FFF;
-	background-color: #3875D7;
+	color            : #FFF;
+	background-color : #3875D7;
 }
+
 .markItUpHeader ul {
-	margin: 0px;
+	margin : 0;
 }
+
 .markItUpButton {
-	display: inline-block;
-	margin-bottom: 0;
-	padding-left:5px;
-	padding-top:4px;
-	font-size: 14px;
-	line-height: 12px;
-	background-color: #f5f5f5;
-	background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
-	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
-	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
-	background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
-	background-repeat: repeat-x;
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
-	border-color: #e6e6e6 #e6e6e6 #bfbfbf;
-	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-*background-color:#e6e6e6;
-filter:progid:DXImageTransform.Microsoft.gradient(enabled = false);
-	border: 1px solid #cccccc;
-*border:0;
-	border-bottom-color: #b3b3b3;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-*margin-left:.3em;
-	-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-	-moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-	box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+	display               : inline-block;
+	margin-bottom         : 0;
+	padding-top           : 4px;
+	font-size             : 14px;
+	line-height           : 12px;
+	*margin-left          : .3em;
 }
 
 .dropzone .message {
-  opacity: 1;
-  -ms-filter: none;
-  filter: none;
+	opacity    : 1;
+	-ms-filter : none;
+	filter     : none;
 }
 
 .dropzone {
-  border: 1px solid rgba(0,0,0,0.03);
-  min-height: 120px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  background: rgba(0,0,0,0.03);
-  padding: 23px;
+	border                : 1px solid rgba(0, 0, 0, 0.03);
+	min-height            : 120px;
+	-webkit-border-radius : 3px;
+	border-radius         : 3px;
+	background            : rgba(0, 0, 0, 0.03);
+	padding               : 23px;
 }
 
 .dropzone .default.message {
-  opacity: 1;
-  -ms-filter: none;
-  filter: none;
-  -webkit-transition: opacity 0.3s ease-in-out;
-  -moz-transition: opacity 0.3s ease-in-out;
-  -o-transition: opacity 0.3s ease-in-out;
-  -ms-transition: opacity 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out;
-  background : no-repeat 0 0;
+	opacity            : 1;
+	-ms-filter         : none;
+	filter             : none;
+	-webkit-transition : opacity 0.3s ease-in-out;
+	-moz-transition    : opacity 0.3s ease-in-out;
+	-o-transition      : opacity 0.3s ease-in-out;
+	-ms-transition     : opacity 0.3s ease-in-out;
+	transition         : opacity 0.3s ease-in-out;
+	background         : no-repeat 0 0;
 }
 
 #klabel_info_drop_browse {
-  display: block;
-  padding: 5px 10px;
-  width: 350px;
-  margin: 50px auto 0 auto;
+	display : block;
+	padding : 5px 10px;
+	width   : 350px;
+	margin  : 50px auto 0 auto;
 }
 
 #files {
-  padding-bottom: 10px;
+	padding-bottom : 10px;
 }
 
 #files button.btn {
-  margin-right: 5px;
+	margin-right : 5px;
 }
 
 #files p {
-  margin: 15px 0 0 0;
+	margin : 15px 0 0 0;
 }
