[K3.1] Crypsis: style editor

--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -339,11 +339,13 @@ label img {
 }
 
 .markItUpHeader ul .markItUpSeparator {
-	margin           : 0 5px;
 	width            : 1px;
+	color            : #ccc;
 	height           : 24px;
+	margin-right     : 5px;
 	overflow         : hidden;
-	background-color : #CCC;
+	border-left      : 1px solid #ccc;
+	text-indent      : -10000px;
 }
 
 .markItUpHeader ul ul .markItUpSeparator {
