Add category icon upload and gallery #41
Instead of uploader, we should use input because now you can icomoon
icons, or own classes

--- a/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
+++ b/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
@@ -66,11 +66,16 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 
 #Kunena a:hover { color: #FF0000 !important; background-color:transparent !important; }
 
+#Kunena .icon-knewchar,
 #Kunena .knewchar {
 	color: #009900;
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+#Kunena .icon-big {
+	font-size: 32px;
+	margin-top: 5px;
+}
 /* Block styling
 ----------------------------------------------------------------------------------------------- */
 
