--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -463,6 +463,7 @@ div.kmsgtext-confidential {
 	text-shadow: 0 1px 0 #ffffff;
 }
 
+.icon-knewchar,
 .knewchar {
 	color: green;
 }
@@ -862,4 +863,9 @@ small.text-muted {
 
 select#postcatid {
 	width: 100%;
+}
+
+.icon-big {
+	font-size: 32px;
+	margin-top: 5px;
 }
