[K4.0] Crypsis: Fix html

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -306,8 +306,10 @@ ul li {
 	font-size: 110%;
 }
 
-.replies, .repliesnum {
+.viewsnum,
+.repliesnum {
 	font-size: 110%;
+	float: right;
 }
 
 .breadcrumb {
@@ -463,6 +465,7 @@ div.kmsgtext-confidential {
 	text-shadow: 0 1px 0 #ffffff;
 }
 
+.icon-knewchar,
 .knewchar {
 	color: green;
 }
@@ -862,4 +865,14 @@ small.text-muted {
 
 select#postcatid {
 	width: 100%;
+}
+
+.icon-big {
+	font-size: 32px;
+	margin-top: 5px;
+}
+
+.filter-sel {
+	margin-top: -40px;
+	margin-bottom: 15px;
 }
