[K4.0] Crypsis html improvements

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -447,12 +447,6 @@ div.kmsgtext-confidential {
 	margin: 0;
 }
 
-.msgfooter {
-	bottom: 0;
-	padding: 10px 5px;
-	height: 20px;
-}
-
 #nav1 > li {
 	float: left;
 }
@@ -643,10 +637,6 @@ table .well {
 	vertical-align: inherit;
 	font-size: inherit;
 	line-height: 150%
-}
-
-.modal {
-	z-index: 2000;
 }
 
 .nav .dropdown-menu a {
@@ -927,4 +917,17 @@ select#postcatid {
 
 #ktopicsform [class*='span'] {
 	margin-left: 0 !important;
+}
+
+.ip {
+	margin: 0 0 10px;
+}
+
+.report {
+	margin-left: 20px;
+	text-decoration: none;
+}
+
+.intro {
+	margin: 0 0 10px 60px;
 }
