--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -722,7 +722,10 @@ h2 .pull-right select {
 	border: 1px solid #dddddd;
 	margin: 0;
 }
-
+#recent-topics .span2,
+#recent-topics .span10 {
+	margin-left: 0;
+}
 #recent-topics img.img-thumbnail {
 	vertical-align: text-top;
 	margin-right: 10px;
@@ -777,8 +780,8 @@ div.kmsg > li {
 #logout-form {
 	float: left;
 	.btn-link {
-		color: inherit;
 		text-decoration:none;
+		margin-left: 5px;
 	}
 }
 
@@ -921,6 +924,7 @@ select#postcatid {
 
 .ip {
 	margin: 0 0 10px;
+	width: 150px;
 }
 
 .report {
@@ -930,4 +934,24 @@ select#postcatid {
 
 .intro {
 	margin: 0 0 10px 60px;
+}
+
+input[type=radio] + label {
+	display          : inline-block;
+	margin           : -2px;
+	padding          : 4px 12px;
+	background-color : transparent;
+}
+
+input[type=radio]:checked + label {
+	background    : rgba(0, 0, 0, 0.07) none;
+	border        : 1px solid rgba(0, 0, 0, 0.2);
+	border-radius : 4px;
+}
+
+label img {
+	pointer-events : none;
+}
+input[type=radio] {
+	display : none;
 }
