Crypsis : the search options "Normal Posts, Unapproved Posts, Deleted Posts" are not selectable #2910

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -952,6 +952,7 @@ input[type=radio]:checked + label {
 label img {
 	pointer-events : none;
 }
+
 input[type=radio] {
 	display : none;
 }
@@ -959,4 +960,8 @@ input[type=radio] {
 div#kwho .well,
 div#kstats .well {
 	padding-left: 25px;
+}
+
+#search input[type=radio] {
+	display : block;
 }
