Crypsis Profile : The options "Keep Current Avatar" and "Use Default Avatar" need checkboxes #2919

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -962,6 +962,7 @@ div#kstats .well {
 	padding-left: 25px;
 }
 
+#editavatar input[type=radio],
 #poll-vote input[type=radio],
 #search input[type=radio] {
 	display : block;
