[K4.0] Crypsis : No icons in subcategories on the index page #2935

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -967,3 +967,12 @@ div#kstats .well {
 #search input[type=radio] {
 	display : block;
 }
+
+ul.inline span.kicon {
+	height : 24px;
+	transform: scale(0.5);
+	margin-bottom: -7px;
+}
+ul.inline i {
+	padding-top: 6px;
+}
