[K4.0] Crypsis: Fix category icon

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -862,7 +862,6 @@ select#postcatid {
 
 .icon-big {
 	font-size: 32px;
-	margin-top: 5px;
 }
 
 .filter-sel {
@@ -975,4 +974,9 @@ ul.inline span.kicon {
 }
 ul.inline i {
 	padding-top: 6px;
+}
+
+tr.category i.icon-big {
+	margin-top:12px;
+	padding-right:8px;
 }
