[K4.0] Crypsis: update html

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -862,11 +862,6 @@ select#postcatid {
 	font-size: 32px;
 }
 
-.filter-sel {
-	margin-top: -40px;
-	margin-bottom: 15px;
-}
-
 .span12 {
 	width: 100%;
 }
@@ -971,7 +966,8 @@ ul.inline span.kicon {
 	margin-bottom: -7px;
 }
 ul.inline i {
-	padding-top: 6px;
+	padding-top: 2px;
+	padding-right: 5px;
 }
 
 [class*="category"] i.icon-big {
@@ -982,3 +978,4 @@ ul.inline i {
 .dropdown-menu {
 	min-width: 160px;
 }
+
