[develop] Crypsis : Admin and moderator can only remove his own Thank You #2920

--- a/components/com_kunena/site/template/blue_eagle/css/kunena.forum.css
+++ b/components/com_kunena/site/template/blue_eagle/css/kunena.forum.css
@@ -2214,6 +2214,7 @@ POST PAGE
 #Kunena .kbuttonmod span.split {background-position: 0 -160px;}
 #Kunena .kbuttonmod span.approve {background-position: 0 -180px;}
 #Kunena .kbuttonmod span.moderate {background-position: 0 -120px;}
+#Kunena .kbuttonmod span.unthankyou {background-position: 0 -40px;}
 
 /* Goto Up/down buttons */
 
