Forport pr K3.0.X to K4.0
https://github.com/Kunena/Kunena-Forum/pull/2719
https://github.com/Kunena/Kunena-Forum/pull/2813
https://github.com/Kunena/Kunena-Forum/pull/2836
https://github.com/Kunena/Kunena-Forum/pull/2840
https://github.com/Kunena/Kunena-Forum/pull/2868
https://github.com/Kunena/Kunena-Forum/pull/2882
https://github.com/Kunena/Kunena-Forum/pull/2903
https://github.com/Kunena/Kunena-Forum/pull/2924
https://github.com/Kunena/Kunena-Forum/pull/2932
https://github.com/Kunena/Kunena-Forum/pull/2930
https://github.com/Kunena/Kunena-Forum/pull/2928
https://github.com/Kunena/Kunena-Forum/pull/2939
https://github.com/Kunena/Kunena-Forum/pull/2938
https://github.com/Kunena/Kunena-Forum/pull/2782
https://github.com/Kunena/Kunena-Forum/pull/2869

--- a/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
+++ b/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
@@ -446,7 +446,7 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 #Kunena h1 a:link,
 #Kunena h1 a:active,
 #Kunena h1 a:visited {
-	color: #FFFFFF;
+	color: #FFFFFF !important;
 }
 #Kunena h2 span.kheadbtn a {
 	border-color: #FFF;
