[K4.0] Crypsis: update less

--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -132,7 +132,8 @@ table.kpostbuttonset {
 	background-image : url(images/quotes.png);
 }
 
-.markItUp .codemodalboxbutton a, .markItUp .codesimplebutton a {
+.markItUp .codemodalboxbutton a,
+.markItUp .codesimplebutton a {
 	background-image : url(images/code.png);
 }
 
