[K4.0] Crypsis: When CB plugin is enabled, text overlaps Avatars on Index #2965

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -677,8 +677,8 @@ small.text-muted {
 	padding-top : 20px;
 }
 
-.last-avatar {
-	padding-left : 10px;
+#index-avatar .media {
+	padding-right : 10px;
 }
 
 #status-form label.btn a.btn {
