[K4.0] Crypsis: improve icons stats/who

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -710,6 +710,12 @@ select#postcatid {
 	font-size : 32px;
 }
 
+.icon-super {
+	margin-top: 20px;
+	margin-left: 5px;
+	font-size : 48px;
+}
+
 #ktopicsform [class*='span'] {
 	margin-left : 0 !important;
 }
@@ -784,4 +790,9 @@ ul.inline i {
 
 #search [class*='span'] {
 	margin-left: 6px !important;
+}
+
+div.pagination a.disabled,
+div.pagination a.disabled:hover {
+	color: #999999;
 }
